# pybayes

./: README.md  pyproject.toml
examples/: chain.logic  dating.logic  dating_weighted.logic  socrates.logic
examples/dating/: input.doc  kb.logic
examples/sentences/: love.sent  mortal.sent
examples/socrates/: input.doc  kb.logic
examples/weather/: input.doc  kb.logic
kb/: socrates.logic
results/: chain.csv
runs/: socrates1.txt
scripts/: analyze_facts.py  babi_print.py  dataset_check.py  facts_grounding_public.py  folio_print.py  parse  plot_convergence.py  ruletaker_print.py  run-example  wanli_print.py
src/qbbn/cli/: client.py  main.py
src/qbbn/cli/commands/: __init__.py  add_text.py  analyze.py  (+20 more)
src/qbbn/core/: analysis.py  analyze_args.py  analyze_implication.py  analyze_verb.py  factor_graph.py  horn.py  inference.py  kb.py  lexicon.py  logic.py  logical_lang.py  pipeline.py  processors.py  run.py  segment.py  sentence_lang.py  state.py  tokenize.py
src/qbbn/server/: deps.py  main.py
src/world/cli/: client.py  main.py
src/world/core/: analysis.py  analyze_args.py  analyze_implication.py  analyze_verb.py  document.py  factor_graph.py  horn.py  implication.py  inference.py  kb.py  lexicon.py  logic.py  logical_lang.py  pipeline.py  processors.py  processors_impl.py  proposition_graph.py  run.py  segment.py  sentence_lang.py  state.py  tokenize.py  translate.py  translate_implication.py  wsd_define.py  wsd_select.py
src/world/server/: deps.py  main.py
tests/: test_api.py  test_api_unit.py  test_lexicon.py  test_logic.py  test_tokenize.py
(+43 files in other folders)
